:bug: package.json

--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-  "homepage": "https://github.com/MaxWolts/With-Love/",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MaxWolts/With-Love.git"
-  },
+  "homepage": "https://maxwolts.github.io/With-Love/",
   "name": "with-love",
   "version": "0.1.0",
   "private": true,
